# REACT-Embedding

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
python/react_embedding/: dataset.py  embedding_net.py  losses.py  metrics.py  sampler.py  trainer.py  triplet_selector.py  utils.py
scripts/: extract_data.py  flip.py  get_gt.py  train.py  train_test_split.py
