<?xml version="1.0"?>
<package format="2">
  <name>react</name>
  <version>0.0.0</version>
  <description>The REACT package</description>
  <maintainer email="phuoc.nguyen@aalto.fi">Phuoc Nguyen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <export>
  </export>
</package>
